fix collapsed navbar, add some custom positioning

--- a/factchecker/static/factchecker/css/main.css
+++ b/factchecker/static/factchecker/css/main.css
@@ -1,3 +1,16 @@
+#navbarCollapse {
+    margin-left: 20px;
+}
+
+.navbar-nav {
+    margin-top: 10px;
+}
+
+.navbar-nav li {
+    margin-right: 10px;
+    margin-left: 10px;
+}
+
 .title {
     max-height: 220px;
     padding: 32px;
